--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,7 @@
 {
+  "tabWidth": 2,
+  "trailingComma": "all",
+  "bracketSpacing": true,
+  "quoteProps": "consistent",
   "plugins": ["prettier-plugin-tailwindcss"]
 }
